[express-server-ts] add manual JSON upload
